import React from 'react';

import Skeleton from '..';
import ConfigProvider from '../../config-provider';
import mountTest from '../../../tests/shared/mountTest';
import rtlTest from '../../../tests/shared/rtlTest';
import { render } from '../../../tests/utils';
import type { AvatarProps } from '../Avatar';
import type { SkeletonButtonProps } from '../Button';
import type { ElementSemanticName } from '../Element';
import type { SkeletonImageProps } from '../Image';
import type { SkeletonInputProps } from '../Input';
import type { SkeletonNodeProps } from '../Node';
import type { SkeletonProps } from '../Skeleton';

describe('Skeleton', () => {
  const genSkeleton = (props: SkeletonProps) => render(<Skeleton loading {...props} />);
  const genSkeletonButton = (props: SkeletonButtonProps) => render(<Skeleton.Button {...props} />);
  const genSkeletonAvatar = (props: AvatarProps) => render(<Skeleton.Avatar {...props} />);
  const genSkeletonInput = (props: SkeletonInputProps) => render(<Skeleton.Input {...props} />);
  const genSkeletonImage = (props: SkeletonImageProps) => render(<Skeleton.Image {...props} />);
  const genSkeletonNode = (props: SkeletonNodeProps) => render(<Skeleton.Node {...props} />);

  mountTest(Skeleton);
  rtlTest(Skeleton);

  it('should without avatar and paragraph', () => {
    const { asFragment } = genSkeleton({ avatar: false, paragraph: false });
    expect(asFragment().firstChild).toMatchSnapshot();
  });

  it('should square avatar', () => {
    const { asFragment } = genSkeleton({ avatar: true, paragraph: false });
    expect(asFragment().firstChild).toMatchSnapshot();
  });

  it('should round title and paragraph', () => {
    const { asFragment } = genSkeleton({ round: true, title: true, paragraph: true });
    expect(asFragment().firstChild).toMatchSnapshot();
  });

  it('should display without children and falsy loading props', () => {
    const { asFragment } = render(<Skeleton loading={false} />);
    expect(asFragment().firstChild).toMatchSnapshot();
  });

  it('should display with empty children and falsy loading props', () => {
    const { container } = render(<Skeleton loading={false}>{0}</Skeleton>);
    expect(container.textContent).toBe('0');
  });

  it('should display children', () => {
    const { container } = render(<Skeleton loading={false}>{[1, 2, 3]}</Skeleton>);
    expect(container.textContent).toBe('123');
  });

  describe('avatar', () => {
    it('size', () => {
      const { asFragment } = genSkeleton({ avatar: { size: 'small' } });
      expect(asFragment().firstChild).toMatchSnapshot();
      const { asFragment: wrapperDefault } = genSkeleton({ avatar: { size: 'medium' } });
      expect(wrapperDefault().firstChild).toMatchSnapshot();
      const { asFragment: wrapperLarge } = genSkeleton({ avatar: { size: 'large' } });
      expect(wrapperLarge().firstChild).toMatchSnapshot();
      const { asFragment: wrapperNumber } = genSkeleton({ avatar: { size: 20 } });
      expect(wrapperNumber().firstChild).toMatchSnapshot();
    });

    it('shape', () => {
      const { asFragment: wrapperCircle } = genSkeleton({ avatar: { shape: 'circle' } });
      expect(wrapperCircle().firstChild).toMatchSnapshot();
      const { asFragment: wrapperSquare } = genSkeleton({ avatar: { shape: 'square' } });
      expect(wrapperSquare().firstChild).toMatchSnapshot();
    });
  });

  describe('title', () => {
    it('width', () => {
      const { asFragment } = genSkeleton({ title: { width: '93%' } });
      expect(asFragment().firstChild).toMatchSnapshot();
    });
  });

  describe('paragraph', () => {
    it('rows', () => {
      const { asFragment } = genSkeleton({ paragraph: { rows: 5 } });
      expect(asFragment().firstChild).toMatchSnapshot();
    });

    it('width', () => {
      const { asFragment: wrapperPure } = genSkeleton({ paragraph: { width: '93%' } });
      expect(wrapperPure().firstChild).toMatchSnapshot();
      const { asFragment: wrapperList } = genSkeleton({ paragraph: { width: ['28%', '93%'] } });
      expect(wrapperList().firstChild).toMatchSnapshot();
    });
  });

  describe('button element', () => {
    it('active', () => {
      const { asFragment } = genSkeletonButton({ active: true });
      expect(asFragment().firstChild).toMatchSnapshot();
    });
    it('block', () => {
      const { asFragment } = genSkeletonButton({ block: true });
      expect(asFragment().firstChild).toMatchSnapshot();
    });
    it('size', () => {
      const { asFragment: wrapperDefault } = genSkeletonButton({ size: 'medium' });
      expect(wrapperDefault().firstChild).toMatchSnapshot();
      const { asFragment: wrapperLarge } = genSkeletonButton({ size: 'large' });
      expect(wrapperLarge().firstChild).toMatchSnapshot();
      const { asFragment } = genSkeletonButton({ size: 'small' });
      expect(asFragment().firstChild).toMatchSnapshot();
    });
    it('shape', () => {
      const { asFragment: wrapperDefault } = genSkeletonButton({ shape: 'default' });
      expect(wrapperDefault().firstChild).toMatchSnapshot();
      const { asFragment: wrapperRound } = genSkeletonButton({ shape: 'round' });
      expect(wrapperRound().firstChild).toMatchSnapshot();
      const { asFragment: wrapperCircle } = genSkeletonButton({ shape: 'circle' });
      expect(wrapperCircle().firstChild).toMatchSnapshot();
    });
  });

  describe('avatar element', () => {
    it('active', () => {
      const { asFragment } = genSkeletonAvatar({ active: true });
      expect(asFragment().firstChild).toMatchSnapshot();
    });
    it('size', () => {
      const { asFragment } = genSkeletonAvatar({ size: 'small' });
      expect(asFragment().firstChild).toMatchSnapshot();
      const { asFragment: wrapperDefault } = genSkeletonAvatar({ size: 'medium' });
      expect(wrapperDefault().firstChild).toMatchSnapshot();
      const { asFragment: wrapperLarge } = genSkeletonAvatar({ size: 'large' });
      expect(wrapperLarge().firstChild).toMatchSnapshot();
      const { asFragment: wrapperNumber } = genSkeletonAvatar({ size: 20 });
      expect(wrapperNumber().firstChild).toMatchSnapshot();
    });

    it('shape', () => {
      const { asFragment: wrapperCircle } = genSkeletonAvatar({ shape: 'circle' });
      expect(wrapperCircle().firstChild).toMatchSnapshot();
      const { asFragment: wrapperSquare } = genSkeletonAvatar({ shape: 'square' });
      expect(wrapperSquare().firstChild).toMatchSnapshot();
    });
  });

  describe('input element', () => {
    it('active', () => {
      const { asFragment } = genSkeletonInput({ active: true });
      expect(asFragment().firstChild).toMatchSnapshot();
    });
    it('size', () => {
      const { asFragment } = genSkeletonInput({ size: 'small' });
      expect(asFragment().firstChild).toMatchSnapshot();
      const { asFragment: wrapperDefault } = genSkeletonInput({ size: 'medium' });
      expect(wrapperDefault().firstChild).toMatchSnapshot();
      const { asFragment: wrapperLarge } = genSkeletonInput({ size: 'large' });
      expect(wrapperLarge().firstChild).toMatchSnapshot();
    });
  });

  describe('componentSize from ConfigProvider', () => {
    it('should apply componentSize to skeleton elements', () => {
      const { container, rerender } = render(
        <ConfigProvider componentSize="small">
          <Skeleton.Avatar />
          <Skeleton.Button />
          <Skeleton.Input />
        </ConfigProvider>,
      );

      expect(container.querySelector('.g-skeleton-avatar-sm')).toBeTruthy();
      expect(container.querySelector('.g-skeleton-button-sm')).toBeTruthy();
      expect(container.querySelector('.g-skeleton-input-sm')).toBeTruthy();

      rerender(
        <ConfigProvider componentSize="large">
          <Skeleton.Avatar />
          <Skeleton.Button />
          <Skeleton.Input />
        </ConfigProvider>,
      );

      expect(container.querySelector('.g-skeleton-avatar-lg')).toBeTruthy();
      expect(container.querySelector('.g-skeleton-button-lg')).toBeTruthy();
      expect(container.querySelector('.g-skeleton-input-lg')).toBeTruthy();
    });

    it('explicit size should override componentSize', () => {
      const { container } = render(
        <ConfigProvider componentSize="large">
          <Skeleton.Avatar size="small" />
          <Skeleton.Button size="small" />
          <Skeleton.Input size="small" />
        </ConfigProvider>,
      );

      expect(container.querySelector('.g-skeleton-avatar-sm')).toBeTruthy();
      expect(container.querySelector('.g-skeleton-button-sm')).toBeTruthy();
      expect(container.querySelector('.g-skeleton-input-sm')).toBeTruthy();
      expect(container.querySelector('.g-skeleton-avatar-lg')).toBeFalsy();
      expect(container.querySelector('.g-skeleton-button-lg')).toBeFalsy();
      expect(container.querySelector('.g-skeleton-input-lg')).toBeFalsy();
    });
  });

  describe('image element', () => {
    it('should render normal', () => {
      const { asFragment } = genSkeletonImage({});
      expect(asFragment().firstChild).toMatchSnapshot();
    });
  });

  describe('custom node element', () => {
    it('should render normal', () => {
      const { asFragment } = genSkeletonNode({});
      expect(asFragment().firstChild).toMatchSnapshot();
      const { asFragment: asFragmentNode } = genSkeletonNode({
        children: <span>Custom Content Node</span>,
      });
      expect(asFragmentNode().firstChild).toMatchSnapshot();
    });
  });

  it('should support style', () => {
    const { asFragment } = genSkeleton({ style: { background: 'blue' } });
    expect(asFragment().firstChild).toMatchSnapshot();
  });

  it('Elements should apply custom styles to semantic elements', () => {
    const elements = ['avatar', 'button', 'input', 'node', 'image'] as const;
    const rootStyle = { background: 'pink' };
    const elementStyle = { background: 'green' };

    type Elements = (typeof elements)[number];
    type SemanticRecord<T> = Partial<Record<Elements, Record<ElementSemanticName, T>>>;

    const customStyles = elements.reduce<SemanticRecord<React.CSSProperties>>(
      (prev, cur) => ({ ...prev, [cur]: { root: rootStyle, content: elementStyle } }),
      {},
    );

    const customClassNames = elements.reduce<SemanticRecord<string>>(
      (prev, cur) => ({ ...prev, [cur]: { root: 'custom-root', content: `custom-${cur}` } }),
      {},
    );

    const { container: avatarContainer } = genSkeletonAvatar({
      styles: customStyles.avatar,
      classNames: customClassNames.avatar,
    });

    const avatarRootElement = avatarContainer.querySelector('.g-skeleton');
    expect(avatarRootElement).toHaveStyle(rootStyle);
    expect(avatarRootElement).toHaveClass(customClassNames.avatar!.root);

    const avatarElement = avatarContainer.querySelector('.g-skeleton-avatar');
    expect(avatarElement).toHaveStyle(elementStyle);
    expect(avatarElement).toHaveClass(customClassNames.avatar!.content);

    const { container: buttonContainer } = genSkeletonButton({
      styles: customStyles.button,
      classNames: customClassNames.button,
    });

    const buttonRootElement = buttonContainer.querySelector('.g-skeleton');
    expect(buttonRootElement).toHaveStyle(rootStyle);
    expect(buttonRootElement).toHaveClass(customClassNames.button!.root);

    const buttonElement = buttonContainer.querySelector('.g-skeleton-button');
    expect(buttonElement).toHaveStyle(elementStyle);
    expect(buttonElement).toHaveClass(customClassNames.button!.content);

    const { container: inputContainer } = genSkeletonInput({
      styles: customStyles.input,
      classNames: customClassNames.input,
    });

    const inputRootElement = inputContainer.querySelector('.g-skeleton');
    expect(inputRootElement).toHaveStyle(rootStyle);
    expect(inputRootElement).toHaveClass(customClassNames.input!.root);

    const inputElement = inputContainer.querySelector('.g-skeleton-input');
    expect(inputElement).toHaveStyle(elementStyle);
    expect(inputElement).toHaveClass(customClassNames.input!.content);

    const { container: nodeContainer } = genSkeletonNode({
      styles: customStyles.node,
      classNames: customClassNames.node,
    });

    const nodeRootElement = nodeContainer.querySelector('.g-skeleton');
    expect(nodeRootElement).toHaveStyle(rootStyle);
    expect(nodeRootElement).toHaveClass(customClassNames.node!.root);

    const nodeElement = nodeContainer.querySelector('.g-skeleton-node');
    expect(nodeElement).toHaveStyle(elementStyle);
    expect(nodeElement).toHaveClass(customClassNames.node!.content);

    const { container: imageContainer } = genSkeletonImage({
      styles: customStyles.image,
      classNames: customClassNames.image,
    });

    const imageRootElement = imageContainer.querySelector('.g-skeleton');
    expect(imageRootElement).toHaveStyle(rootStyle);
    expect(imageRootElement).toHaveClass(customClassNames.image!.root);

    const imageElement = imageContainer.querySelector('.g-skeleton-image');
    expect(imageElement).toHaveStyle(elementStyle);
    expect(imageElement).toHaveClass(customClassNames.image!.content);
  });
});
