// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Skeleton avatar element active 1`] = `
<div
  class="g-skeleton g-skeleton-element g-skeleton-active css-var-root"
>
  <span
    class="g-skeleton-avatar g-skeleton-avatar-circle"
  />
</div>
`;

exports[`Skeleton avatar element shape 1`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-avatar g-skeleton-avatar-circle"
  />
</div>
`;

exports[`Skeleton avatar element shape 2`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-avatar g-skeleton-avatar-square"
  />
</div>
`;

exports[`Skeleton avatar element size 1`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-avatar g-skeleton-avatar-sm g-skeleton-avatar-circle"
  />
</div>
`;

exports[`Skeleton avatar element size 2`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-avatar g-skeleton-avatar-circle"
  />
</div>
`;

exports[`Skeleton avatar element size 3`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-avatar g-skeleton-avatar-lg g-skeleton-avatar-circle"
  />
</div>
`;

exports[`Skeleton avatar element size 4`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-avatar g-skeleton-avatar-circle"
    style="width: 20px; height: 20px; line-height: 20px;"
  />
</div>
`;

exports[`Skeleton avatar shape 1`] = `
<div
  class="g-skeleton g-skeleton-with-avatar css-var-root"
>
  <div
    class="g-skeleton-header"
  >
    <span
      class="g-skeleton-avatar g-skeleton-avatar-lg g-skeleton-avatar-circle"
    />
  </div>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar shape 2`] = `
<div
  class="g-skeleton g-skeleton-with-avatar css-var-root"
>
  <div
    class="g-skeleton-header"
  >
    <span
      class="g-skeleton-avatar g-skeleton-avatar-lg g-skeleton-avatar-square"
    />
  </div>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 1`] = `
<div
  class="g-skeleton g-skeleton-with-avatar css-var-root"
>
  <div
    class="g-skeleton-header"
  >
    <span
      class="g-skeleton-avatar g-skeleton-avatar-sm g-skeleton-avatar-circle"
    />
  </div>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 2`] = `
<div
  class="g-skeleton g-skeleton-with-avatar css-var-root"
>
  <div
    class="g-skeleton-header"
  >
    <span
      class="g-skeleton-avatar g-skeleton-avatar-circle"
    />
  </div>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 3`] = `
<div
  class="g-skeleton g-skeleton-with-avatar css-var-root"
>
  <div
    class="g-skeleton-header"
  >
    <span
      class="g-skeleton-avatar g-skeleton-avatar-lg g-skeleton-avatar-circle"
    />
  </div>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 4`] = `
<div
  class="g-skeleton g-skeleton-with-avatar css-var-root"
>
  <div
    class="g-skeleton-header"
  >
    <span
      class="g-skeleton-avatar g-skeleton-avatar-circle"
      style="width: 20px; height: 20px; line-height: 20px;"
    />
  </div>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton button element active 1`] = `
<div
  class="g-skeleton g-skeleton-element g-skeleton-active css-var-root"
>
  <span
    class="g-skeleton-button"
  />
</div>
`;

exports[`Skeleton button element block 1`] = `
<div
  class="g-skeleton g-skeleton-element g-skeleton-block css-var-root"
>
  <span
    class="g-skeleton-button"
  />
</div>
`;

exports[`Skeleton button element shape 1`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-button"
  />
</div>
`;

exports[`Skeleton button element shape 2`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-button g-skeleton-button-round"
  />
</div>
`;

exports[`Skeleton button element shape 3`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-button g-skeleton-button-circle"
  />
</div>
`;

exports[`Skeleton button element size 1`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-button"
  />
</div>
`;

exports[`Skeleton button element size 2`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-button g-skeleton-button-lg"
  />
</div>
`;

exports[`Skeleton button element size 3`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-button g-skeleton-button-sm"
  />
</div>
`;

exports[`Skeleton custom node element should render normal 1`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <div
    class="g-skeleton-node"
  />
</div>
`;

exports[`Skeleton custom node element should render normal 2`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <div
    class="g-skeleton-node"
  >
    <span>
      Custom Content Node
    </span>
  </div>
</div>
`;

exports[`Skeleton image element should render normal 1`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <div
    class="g-skeleton-image"
  >
    <svg
      class="g-skeleton-image-svg"
      viewBox="0 0 1098 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Image placeholder
      </title>
      <path
        class="g-skeleton-image-path"
        d="M365.7 329.1q0 45.8-32 77.7t-77.7 32-77.7-32-32-77.7 32-77.6 77.7-32 77.7 32 32 77.6M951 548.6v256H146.3V694.9L329 512l91.5 91.4L713 311zm54.8-402.3H91.4q-7.4 0-12.8 5.4T73 164.6v694.8q0 7.5 5.5 12.9t12.8 5.4h914.3q7.5 0 12.9-5.4t5.4-12.9V164.6q0-7.5-5.4-12.9t-12.9-5.4m91.4 18.3v694.8q0 37.8-26.8 64.6t-64.6 26.9H91.4q-37.7 0-64.6-26.9T0 859.4V164.6q0-37.8 26.8-64.6T91.4 73h914.3q37.8 0 64.6 26.9t26.8 64.6"
      />
    </svg>
  </div>
</div>
`;

exports[`Skeleton input element active 1`] = `
<div
  class="g-skeleton g-skeleton-element g-skeleton-active css-var-root"
>
  <span
    class="g-skeleton-input"
  />
</div>
`;

exports[`Skeleton input element size 1`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-input g-skeleton-input-sm"
  />
</div>
`;

exports[`Skeleton input element size 2`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-input"
  />
</div>
`;

exports[`Skeleton input element size 3`] = `
<div
  class="g-skeleton g-skeleton-element css-var-root"
>
  <span
    class="g-skeleton-input g-skeleton-input-lg"
  />
</div>
`;

exports[`Skeleton paragraph rows 1`] = `
<div
  class="g-skeleton css-var-root"
>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 1`] = `
<div
  class="g-skeleton css-var-root"
>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 93%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 2`] = `
<div
  class="g-skeleton css-var-root"
>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li
        style="width: 28%;"
      />
      <li
        style="width: 93%;"
      />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="g-skeleton g-skeleton-rtl css-var-root"
>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton should display without children and falsy loading props 1`] = `null`;

exports[`Skeleton should round title and paragraph 1`] = `
<div
  class="g-skeleton g-skeleton-round css-var-root"
>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton should square avatar 1`] = `
<div
  class="g-skeleton g-skeleton-with-avatar css-var-root"
>
  <div
    class="g-skeleton-header"
  >
    <span
      class="g-skeleton-avatar g-skeleton-avatar-lg g-skeleton-avatar-square"
    />
  </div>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
    />
  </div>
</div>
`;

exports[`Skeleton should support style 1`] = `
<div
  class="g-skeleton css-var-root"
  style="background: blue;"
>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton should without avatar and paragraph 1`] = `
<div
  class="g-skeleton css-var-root"
>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
    />
  </div>
</div>
`;

exports[`Skeleton title width 1`] = `
<div
  class="g-skeleton css-var-root"
>
  <div
    class="g-skeleton-section"
  >
    <h3
      class="g-skeleton-title"
      style="width: 93%;"
    />
    <ul
      class="g-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;
